<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/term_map" android:key="map">

        <CheckBoxPreference
            android:key="rotate_by_azimuth"
            android:summary="@string/prompt_rotate_by_azimuth"
            android:title="@string/term_rotate_by_azimuth"
            android:defaultValue="true" />

    </PreferenceCategory>

    <PreferenceCategory android:title="@string/term_care_about" android:key="map">

        <CheckBoxPreference
            android:key="search_unluckyhouse"
            android:summary="@string/prompt_unluckyhouse"
            android:title="@string/term_unluckyhouse"
            android:defaultValue="true" />

        <CheckBoxPreference
            android:key="search_unluckylabor"
            android:summary="@string/prompt_unluckylabor"
            android:title="@string/term_unluckylabor"
            android:defaultValue="false" />

    </PreferenceCategory>

</PreferenceScreen>