<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2">

            <TextView
                android:text="@string/term_licenses"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:layout_marginTop="50dp"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Title" />

            <TextView
                android:text="@string/term_osl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

            <TextView
                android:text="@string/term_pkg_mapsforge"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:padding="5dp"
                android:layout_width="180dp" />

            <tacoball.com.geomancer.view.LinkView
                android:text="@string/term_license_lgpl_30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp" />

            <TextView
                android:text="@string/term_pkg_commonsio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:padding="5dp" />

            <tacoball.com.geomancer.view.LinkView
                android:text="@string/term_license_apache_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp" />

            <TextView
                android:text="@string/term_pkg_androidsvg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:padding="5dp" />

            <tacoball.com.geomancer.view.LinkView
                android:text="@string/term_license_apache_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp" />

            <TextView
                android:text="@string/term_pkg_gson"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:padding="5dp" />

            <tacoball.com.geomancer.view.LinkView
                android:text="@string/term_license_apache_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp" />

            <TextView
                android:text="@string/term_odl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2"
                android:layout_marginTop="30dp"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead" />

            <TextView
                android:text="@string/term_osm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:padding="5dp" />

            <tacoball.com.geomancer.view.LinkView
                android:text="@string/term_license_odbl_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp" />

            <TextView
                android:text="@string/term_coastline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:padding="5dp" />

            <tacoball.com.geomancer.view.LinkView
                android:text="@string/term_license_odbl_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp" />

            <!-- for scrolling test -->
            <TextView
                android:text="\n"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_columnSpan="2" />

        </GridLayout>

    </ScrollView>

</RelativeLayout>
