<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <tacoball.com.geomancer.view.TaiwanMapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_alignParentTop="true"
        android:layout_above="@+id/buttonsBar" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/buttonsBar"
        android:layout_alignParentBottom="true"
        android:background="#303030">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btPosition"
            android:text="我的位置"
            android:drawableLeft="@android:drawable/ic_menu_compass"
            android:layout_weight="1"
            android:layout_marginLeft="20dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="掐指一算"
            android:drawableLeft="@android:drawable/ic_menu_search"
            android:id="@+id/btMeasure"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />

        <!--
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btReport"
            android:text="八卦通報"
            android:layout_weight="1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp" />
        -->

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignBottom="@id/mapView"
        android:layout_marginRight="5dp"
        android:id="@+id/statusBar"
        android:layout_marginBottom="50dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="(25.0000, 121.0000)"
            android:id="@+id/txvLocation"
            android:layout_marginRight="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Z="
            android:id="@+id/txvZoomLabel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="10"
            android:id="@+id/txvZoomValue" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Azimuth="
            android:id="@+id/txvAzimuthLabel"
            android:layout_marginLeft="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="30"
            android:id="@+id/txvAzimuthValue" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/term_zoom_in_z15"
        android:id="@+id/txvHint"
        android:layout_above="@+id/statusBar"
        android:layout_alignEnd="@+id/statusBar"
        android:layout_marginBottom="5dp"
        android:textColor="#003090" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_margin="3dp"
        android:columnCount="2"
        android:rowCount="2"
        android:visibility="invisible"
        android:background="@drawable/geomancer_info_border"
        android:useDefaultMargins="false"
        android:id="@+id/glyPointInfo">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:paddingEnd="6dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/term_summary"
            android:id="@+id/txvSummaryLabel" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="test"
            android:id="@+id/txvSummaryContent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:paddingEnd="6dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/term_data_source"
            android:id="@+id/txvURLLabel" />

        <tacoball.com.geomancer.view.LinkView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="test"
            android:id="@+id/txvURLContent" />

    </GridLayout>

    <tacoball.com.geomancer.view.CircleButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/more96"
        android:id="@+id/btnMore" />

    <tacoball.com.geomancer.view.CircleButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/btnMore"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        android:src="@drawable/contrib96"
        android:id="@+id/btnContributors" />

    <tacoball.com.geomancer.view.CircleButton
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/btnContributors"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:visibility="invisible"
        android:src="@drawable/license96"
        android:id="@+id/btnLicense" />

</RelativeLayout>
